# echidna

./: .conflow.yaml  .echidnabot.toml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .guix-channel  .hypatia-baseline.json  .hypatia-ignore  .pre-commit-config.yaml  .trivyignore  .trusted-base-ignore  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  ADVANCED_TYPING_GAP_ANALYSIS.md  AFFIRMATION.adoc  AGDA_IMPLEMENTATION_SUMMARY.md  AI.a2ml  AUTHORS.md  CHANGELOG.adoc  CHANGELOG.md  CHAPEL_PLUGGABILITY_DESIGN.md  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  CORRECTNESS-ARCHITECTURE.md  CVC5_IMPLEMENTATION_SUMMARY.md  Cargo.toml  Containerfile  DELIVERABLES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOT-FILES-STATUS.md  Dockerfile  ECHIDNA_COMPARISON_ANALYSIS.md  ECOSYSTEM-INTEGRATION.md  ECOSYSTEM.scm  (+78 more)
.claude/: CLAUDE.md  settings.local.json
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh
.containerization/: Containerfile  Containerfile.acl2  Containerfile.full  Containerfile.hol4  Containerfile.imandra  Containerfile.mcp  Containerfile.metamath  Containerfile.or-tools  Containerfile.proverif  Containerfile.scip  Containerfile.tamarin  Containerfile.twelf  Containerfile.wave3  build.sh
.githooks/: pre-commit
.github/: CODEOWNERS  MAINTAINERS  PROVEN-INTEGRATION.md  dependabot.yml  settings.yml
.julia-env/: Manifest.toml
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  ER.a2ml  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  ROADMAP.a2ml  STATE.a2ml  STATE.scm  TRUST.contractile  provers.a2ml  setup-prover-env.k9.ncl
.reuse/: dep5
.well-known/: ai.txt  aibdp.json  dc.xml  humans.txt  security.txt
HOL-o-extension/: 0-AI-MANIFEST.a2ml  activate.sh
LICENSES/: MIT.txt  Palimpsest-0.6.txt
ai-cli-crash-capture/: recoverer-setup.sh
audits/: assail-classifications.a2ml  audit-ffi-boundary.md  audit-pa021-axioms-2026-05-26.md
benches/: parser_bench.rs  proof_benchmarks.rs  routing_benchmarks.rs  verification_bench.rs
chapel_poc/: README.md  chapel_ffi_exports.chpl  parallel_proof_search.chpl
config/: config.ncl  solver-manifest.toml
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
crates/echidna-core/: Cargo.toml
crates/echidna-core-spark/: CREUSOT-SETUP.md  Cargo.toml  rust-toolchain.toml
crates/echidna-core-spark/src/: axiom_tracker.rs  lib.rs  pareto.rs
crates/echidna-core/src/: core.rs  lib.rs  types.rs
crates/echidna-mcp/: Cargo.toml  README.md
crates/echidna-mcp/src/: main.rs
crates/echidna-wire/: Cargo.toml  build.rs
crates/echidna-wire/schemas/: VERSIONING.md  common.capnp  gnn.capnp  proof.capnp  prover.capnp  verisim_er.capnp
crates/echidna-wire/src/: lib.rs
crates/typed_wasm/: Cargo.toml
crates/typed_wasm/src/: lib.rs
docs/: AGDA_BACKEND.md  AGENTIC_FEATURES.md  ARCHITECTURE.md  ASPECT_HIERARCHY.txt  ASPECT_IMPLEMENTATION_SUMMARY.md  ASPECT_QUICK_START.md  ASPECT_TAGGING.md  CITATIONS.adoc  COQ_BACKEND_IMPLEMENTATION.md  CORPUS-ADAPTERS.md  CORPUS.md  CVC5_IMPLEMENTATION.md  CVC5_QUICK_REFERENCE.md  ECOSYSTEM-INTEGRATION.md  ENV-VARS.md  HP-BACKEND-ONBOARDING.md  IMPLEMENTATION-SPECS.md  LEARNING-ARCHITECTURE.adoc  Language-Provability-Analysis.md  METAMATH_BACKEND.md  MIZAR_BACKEND.md  MIZAR_QUICK_START.md  MVP-1.0-DEPS.adoc  MVP-1.0-MISSING.adoc  MVP-1.0.adoc  PROOF-NEEDS.md  PROVER_COUNT.md  QUICKSTART.md  ROADMAP.md  SSG_ROADMAP.adoc  STATE-VISUALIZER.adoc  SUPPORTED_PROVERS.md  TRAINING_DATA_EXPANSION.md  Z3_BACKEND.md  isabelle-backend.md  tech-debt-2026-05-26.md
docs-site/: mix.exs
echidna-playground/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  coq-page.fs  deno.json  index.html  package-lock.json  package.json  rescript.json  roadmap.adoc  server.ts  styles.css
echidna-playground/melange-example/: README.md  dune  dune-project
echidnabot/: .gitignore  Cargo.toml  Containerfile  FLEET-INTEGRATION.md  README.adoc  ROADMAP.adoc  echidnabot.example.toml  echidnabot.toml  flake.nix  guix.scm
examples/: .simple_proof.aux  README.md  aspect_tagging_demo.rs  simple_proof.glob  simple_proof.v  z3_quantifiers.smt2  z3_simple.smt2
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_axiom_tracker.rs  fuzz_proof_state.rs  fuzz_trust_pipeline.rs
guix-channel/: echidna.scm
hooks/: README.md  pre-commit  pre-push
manifests/: live-provers.scm
meta-checker/: README.adoc  echidna-meta.agda-lib
metrics/: MetricsSuite.jl  README.md  alignment_rate.jl  corpus_loader.jl  floor_progress.jl  heaps_beta.jl  msc_taxonomy_coverage.jl  oov_rate.jl  prover_floor.jl  run_all.jl  tactic_cluster_purity.jl  triangulation_rate.jl  verisim_sink.jl  zipf_s.jl
models/: model_metadata.txt  premise_vocab.txt  retrain_metadata.txt  tactic_model.txt  tactic_vocab.txt  training_metrics.json  training_stats.txt
reports/: findings-current-norm.json  hypatia-findings-v2.json  hypatia-findings-v3.json  hypatia-findings-v4.json  hypatia-findings.json
rules/: security_learning.lgt
schemas/: VERSIONING.md  echidna.capnp
scripts/: a2ml_emit.jl  align_premises.jl  balance_corpus.jl  balance_corpus.py  balance_corpus.sh  balance_corpus_fast.sh  balance_smtlib.sh  balance_smtlib_optimized.sh  ban-npm.sh  build-production.sh  collect-field-signal.sh  demo-proof.sh  expand_training_data.sh  extract_abc.jl  extract_abella.jl  extract_acl2.jl  extract_acl2.py  extract_acl2s.jl  extract_afp.jl  extract_agda.jl  extract_all.sh  extract_alloy.jl  extract_arend.jl  extract_athena.jl  extract_boogie.jl  extract_cameleer.jl  extract_cbmc.jl  extract_coqgym.jl  extract_coqgym.py  extract_dafny.jl  extract_dafny.py  (+93 more)
src/interfaces/graphql/: Cargo.toml  ffi_wrapper.rs  main.rs  resolvers.rs  schema.rs
src/interfaces/grpc/: Cargo.toml  build.rs  ffi_wrapper.rs  main.rs
src/interfaces/grpc/proto/: echidna.proto
src/interfaces/rest/: Cargo.toml  ffi_wrapper.rs  handlers.rs  main.rs  models.rs
(+1022 files in other folders)
