# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "echidna-fuzz"
version = "0.0.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.echidna]
path = ".."

[[bin]]
name = "fuzz_input"
path = "fuzz_targets/fuzz_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_proof_state"
path = "fuzz_targets/fuzz_proof_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trust_pipeline"
path = "fuzz_targets/fuzz_trust_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_axiom_tracker"
path = "fuzz_targets/fuzz_axiom_tracker.rs"
test = false
doc = false
bench = false
