# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "echidna-core-spark"
version = "0.1.0"
edition = "2021"
description = "Creusot-annotated trust pipeline kernel for ECHIDNA"
# crates.io requires an OSI-approved identifier; MPL-2.0 is the automatic
# legal fallback for PMPL-1.0-or-later until PMPL achieves formal recognition.
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/echidna"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# creusot = "0.1"  # Uncomment when toolchain is pinned; see CREUSOT-SETUP.md

[features]
# Gate all Creusot-specific annotations behind this feature so that
# `cargo build -p echidna-core-spark` succeeds on stable Rust without
# any Creusot installation.
creusot = []
