# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name        = "echidna-mcp"
version     = "0.1.0"
edition     = "2021"
authors     = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license     = "PMPL-1.0-or-later"
description = "Model Context Protocol server exposing ECHIDNA to AI coding agents (Claude Code, Claude API, etc.)"
repository  = "https://github.com/hyperpolymath/echidna"

[[bin]]
name = "echidna-mcp"
path = "src/main.rs"

[dependencies]
rmcp        = { version = "1", features = ["server", "macros", "transport-io"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
schemars    = "1"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
