# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "typed-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "TypedWasm prover oracle engine for ECHIDNA — standalone domain types and engine"
repository = "https://github.com/hyperpolymath/echidna"

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
