# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "echidna-graphql"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "GraphQL interface for ECHIDNA theorem proving platform"
repository = "https://github.com/hyperpolymath/echidna-graphql"
readme = "README.adoc"
keywords = ["theorem-proving", "graphql", "formal-verification", "proofs"]
categories = ["api-bindings", "science"]

[[bin]]
name = "echidna-graphql"
path = "main.rs"

[dependencies]
# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Web framework
axum = "0.7"
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IPC/Communication with ECHIDNA core
# (Placeholder - will need actual ECHIDNA FFI/IPC mechanism)
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
