# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "echidna-rest"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "REST API for ECHIDNA theorem proving platform"
publish = false

[[bin]]
name = "echidna-rest"
path = "main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# OpenAPI
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
